k8s/prod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gtw
  namespace: chat-app
  annotations:
    "cert-manager.io/issuer": "ca-issuer"
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "chat-app.nxyt.pl"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: tls-beta-chat-app-http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: chat-app
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          namespace: chat-app
          port: 8282
